--- a/tasks/dependencies-Darwin.yml
+++ b/tasks/dependencies-Darwin.yml
@@ -1,11 +1,14 @@
 ---
 
 - name: "Installing dependencies"
-  become: yes
-  become_user: "root"
   homebrew:
     name: "{{ item }}"
     state: present
   with_items:
     - git
     - readline
+
+- name: "PyPI | Ensure Installed"
+  easy_install:
+    name: pip
+    state: latest
