--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,25 +1,38 @@
 ---
-dependencies:
-- fubarhouse.commons
-
 galaxy_info:
   author: fubarhouse
-  description: Provisions python via pyenv
+  description: Installs PyEnv and Python.
   license: "license (BSD, MIT)"
   min_ansible_version: 2.1.0.0
   platforms:
-  - name: Ubuntu
-    versions:
-    - precise
-    - trusty
-    - xenial
   - name: Debian
     versions:
-    - all
+      - wheezy
+      - jessie
+      - stretch
   - name: EL
     versions:
-    - 6
-    - 7
+      - 6
+      - 7
+  - name: Fedora
+    versions:
+      - 24
+      - 25
+      - 26
+  - name: Ubuntu
+    versions:
+      - artful
+      - zesty
+      - yakkety
+      - xenial
+      - vivid
+      - wily
+      - utopic
+      - trusty
+      - saucy
+      - raring
+      - quantal
+      - precise
   categories:
   - system
   - development
@@ -28,3 +41,4 @@ galaxy_info:
   - virtualenv
   - pip
   - pypi
+dependencies: []
