--- a/tasks/dependencies-Debian.yml
+++ b/tasks/dependencies-Debian.yml
@@ -1,8 +1,6 @@
 ---
 
 - name: "Installing dependencies"
-  become: yes
-  become_user: "root"
   apt:
     name: "{{ item }}"
     state: installed
@@ -24,3 +22,4 @@
     - libncurses5-dev
     - libncursesw5-dev
     - xz-utils
+    - pip
