--- a/tasks/dependencies-RedHat.yml
+++ b/tasks/dependencies-RedHat.yml
@@ -1,8 +1,6 @@
 ---
 
 - name: "Installing dependencies"
-  become: yes
-  become_user: "root"
   yum:
     name: "{{ item }}"
     state: installed
@@ -20,3 +18,4 @@
     - sudo
     - which
     - openssl-devel
+    - python-pip
