--- a/tasks/pypi.yml
+++ b/tasks/pypi.yml
@@ -1,11 +1,6 @@
 ---
 # file: roles/fubarhouse.python/tasks/pypi.yml
 
-- name: "PyPI | Ensure Installed"
-  easy_install:
-    name: pip
-    state: present
-
 #- name: "PyPI | Ensure absent"
 #  pip:
 #    name: "{{ item }}"
@@ -16,4 +11,5 @@
   pip:
     name: "{{ item }}"
     state: latest
+    executable: /usr/local/bin/pip2
   with_items: "{{ python_packages }}"
