--- a/tasks/dependencies-Debian.yml
+++ b/tasks/dependencies-Debian.yml
@@ -5,7 +5,7 @@
     name: "{{ item }}"
     state: installed
   with_items:
-    - git
+    - git-core
     - make
     - build-essential
     - ca-certificates
