Segment os-specific tasks more.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,8 +8,23 @@
   include: cleanup.yml
   when: pyenv_clean_install|bool == true
 
-- name: "Include OS-specific tasks"
-  include: "dependencies-{{ ansible_os_family}}.yml"
+- name: "Python | Include OS-Specific tasks (CentOS)"
+  include: tasks-CentOS.yml
+  when: ansible_distribution == "CentOS"
+
+- name: "Python | Include OS-Specific tasks (Darwin)"
+  include: tasks-Darwin.yml
+  when: ansible_os_family == "tasks-Darwin"
+
+- name: "Python | Include OS-Specific tasks (Debian)"
+  include: tasks-Debian.yml
+  when: ansible_os_family == "Debian"
+
+- name: "Python | Include OS-Specific tasks (RedHat)"
+  include: tasks-RedHat.yml
+  when:
+    - ansible_os_family == "RedHat"
+    - ansible_distribution != "CentOS"
 
 - name: "Include tasks for PyEnv installation"
   include: pyenv.yml
