--- a/tasks/tasks-Debian.yml
+++ b/tasks/tasks-Debian.yml
@@ -5,7 +5,7 @@
     name: "{{ item }}"
     state: installed
   with_items:
-    - git-core
+    - git
     - make
     - build-essential
     - ca-certificates
