--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -47,7 +47,7 @@
       when: ansible_os_family == 'Debian'
 
     - name: Upgrade pip
-      shell: pip install --upgrade pip==1.2.1
+      shell: pip install --upgrade pip
       failed_when: false
       changed_when: false
       when: ansible_os_family == 'Debian'
