--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -27,6 +27,7 @@
         state: installed
       with_items:
         - openssl
+        - python-openssl
       failed_when: false
       changed_when: false
       when:
