Switch out openssl, python-openssl for openssl-devel

--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -26,8 +26,7 @@
         name: "{{ item }}"
         state: installed
       with_items:
-        - openssl
-        - python-openssl
+        - openssl-devel
       failed_when: false
       changed_when: false
       when:
