--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -26,7 +26,7 @@
         name: "{{ item }}"
         state: installed
       with_items:
-        - openssl-devel
+        - compat-openssl10-devel
       failed_when: false
       changed_when: false
       when:
