--- a/tasks/tasks-RedHat.yml
+++ b/tasks/tasks-RedHat.yml
@@ -6,15 +6,12 @@
     state: installed
   with_items:
     - git
-    - gcc
-    - git
-    - patch
     - zlib-devel
     - bzip2
     - bzip2-devel
     - readline-devel
     - sqlite
     - sqlite-devel
-    - sudo
-    - which
-    - python-pip
+    - openssl-devel
+    - xz
+    - xz-devel
