--- a/.travis.yml
+++ b/.travis.yml
@@ -7,93 +7,95 @@ services: docker
 
 env:
 
-  - docker_user: fubarhouse
-    distro: ubuntu1304
+  - distro: precise
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1310
+  - distro: quantal
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: geerlingguy
-    distro: ubuntu1404
+  - distro: raring
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1410
+  - distro: saucy
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1504
+  - distro: trusty
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1510
+  - distro: utopic
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: geerlingguy
-    distro: ubuntu1604
+  - distro: vivid
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1610
+  - distro: wily
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1704
+  - distro: xenial
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: ubuntu1710
+  - distro: yakkety
     init: /sbin/init
     run_opts: --privileged
     playbook: playbook.yml
-  - docker_user: geerlingguy
-    distro: centos6
+  - distro: zesty
+    init: /sbin/init
+    run_opts: --privileged
+    playbook: playbook.yml
+  - distro: artful
+    init: /sbin/init
+    run_opts: --privileged
+    playbook: playbook.yml
+  - distro: bionic
+    init: /sbin/init
+    run_opts: --privileged
+    playbook: playbook.yml
+  - distro: centos-6
     init: /sbin/init
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: geerlingguy
-    distro: centos7
+  - distro: centos-7
     init: /usr/lib/systemd/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: debian7
+  - distro: wheezy
     init: /bin/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: geerlingguy
-    distro: debian8
+  - distro: jessie
     init: /lib/systemd/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: debian9
+  - distro: stretch
     init: /bin/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: fedora24
+  - distro: buster
+    init: /bin/systemd
+    run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
+    playbook: playbook.yml
+  - distro: fedora-24
     init: /usr/lib/systemd/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: fedora25
+  - distro: fedora-25
     init: /usr/lib/systemd/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
-  - docker_user: fubarhouse
-    distro: fedora26
+  - distro: fedora-26
+    init: /usr/lib/systemd/systemd
+    run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
+    playbook: playbook.yml
+  - distro: fedora-27
     init: /usr/lib/systemd/systemd
     run_opts: --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro
     playbook: playbook.yml
@@ -101,25 +103,25 @@ env:
 before_install:
 
   # Pull container.
-  - 'docker pull ${docker_user}/docker-${distro}-ansible:latest'
+  - 'docker pull fubarhouse/docker-ansible:${distro}'
 
 script:
 
   - container_id=$(mktemp)
 
   # Run container in detached state.
-  - 'docker run --detach --volume="${PWD}":/etc/ansible/roles/role_under_test:ro ${run_opts} ${docker_user}/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
+  - 'docker run --detach --volume="${PWD}":/etc/ansible/roles/role_under_test:ro ${run_opts} fubarhouse/docker-ansible:${distro} "${init}" > "${container_id}"'
 
   # Ansible syntax check.
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook} --syntax-check'
 
   # Test role.
-  - 'travis_wait 60 docker exec "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook} --sudo'
+  - 'travis_wait 30 docker exec "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook} --sudo'
 
   - idempotence=$(mktemp)
   - >
     docker exec "$(cat ${container_id})"
-    ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook} --sudo
+    ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook} --sudo -vvvv
     | tee -a ${idempotence}
   - >
     tail ${idempotence}
