Remove support for Yakkety.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,7 +23,7 @@ galaxy_info:
     versions:
       - artful
       - zesty
-      - yakkety
+#      - yakkety
       - xenial
       - vivid
       - wily
