--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -4,6 +4,8 @@
   vars:
     python_version: 2.7.13
     python_versions: []
+    python_packages:
+      - virtualenv
 
   pre_tasks:
     - name: Update yum cache.
