--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,33 +5,39 @@ galaxy_info:
   license: "license (BSD, MIT)"
   min_ansible_version: 2.1.0.0
   platforms:
-  - name: Debian
-    versions:
-      - wheezy
-      - jessie
-      - stretch
-  - name: EL
-    versions:
-      - 6
-      - 7
-  - name: Fedora
-    versions:
-      - 24
-      - 25
-      - 26
-  - name: Ubuntu
-    versions:
-      - cuttlefish
-      - artful
-      - zesty
-      - yakkety
-      - xenial
-      - vivid
-      - wily
-      - utopic
-      - trusty
-      - saucy
-      - raring
+    - name: Debian
+      versions:
+        - wheezy
+        - jessie
+        - stretch
+        - buster
+    - name: EL
+      versions:
+        - 6
+        - 7
+    - name: Fedora
+      versions:
+        - 24
+        - 25
+        - 26
+        - 27
+        - 28
+    - name: Ubuntu
+      versions:
+        - precise
+        - quantal
+        - raring
+        - saucy
+        - trusty
+        - utopic
+        - wily
+        - vivid
+        - xenial
+        - yakkety
+        - zesty
+        - artful
+        - bionic
+        - cosmic
   categories:
   - system
   - development
