--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,44 +2,44 @@
 # file: roles/fubarhouse.python/tasks/main.yml
 
 - name: "Include setup tasks"
-  include: setup.yml
+  include_tasks: setup.yml
 
 - name: "Include cleanup tasks"
-  include: cleanup.yml
+  include_tasks: cleanup.yml
   when: pyenv_clean_install|bool == true
 
 - name: "Python | Include OS-Specific tasks (CentOS)"
-  include: tasks-CentOS.yml
+  include_tasks: tasks-CentOS.yml
   when: ansible_distribution == "CentOS"
 
 - name: "Python | Include OS-Specific tasks (Darwin)"
-  include: tasks-Darwin.yml
+  include_tasks: tasks-Darwin.yml
   when: ansible_os_family == "tasks-Darwin"
 
 - name: "Python | Include OS-Specific tasks (Debian)"
-  include: tasks-Debian.yml
+  include_tasks: tasks-Debian.yml
   when: ansible_os_family == "Debian"
 
 - name: "Python | Include OS-Specific tasks (RedHat)"
-  include: tasks-RedHat.yml
+  include_tasks: tasks-RedHat.yml
   when:
     - ansible_os_family == "RedHat"
     - ansible_distribution != "CentOS"
 
 - name: "Include tasks for PyEnv installation"
-  include: pyenv.yml
+  include_tasks: pyenv.yml
   when: install_pyenv|bool == true
 
 - name: "Include tasks for Python installation"
-  include: python.yml
+  include_tasks: python.yml
   when: install_python|bool == true
 
 - name: "Include tasks for PyEnv updater"
-  include: plugin-updater.yml
+  include_tasks: plugin-updater.yml
 
 - name: "Include Virtualenv tasks"
-  include: plugin-virtualenv.yml
+  include_tasks: plugin-virtualenv.yml
 
 - name: "Include Pypi tasks"
-  include: pypi.yml
+  include_tasks: pypi.yml
   when: install_pypi|bool == true
