--- a/tasks/plugin-virtualenv.yml
+++ b/tasks/plugin-virtualenv.yml
@@ -46,7 +46,7 @@
   shell: "{{ pyenv_symlink_exec }} global system"
   changed_when: false
 
-- name: VirtualEnv | Install virtual environment
+- name: VirtualEnv | Install virtual environment(s)
   shell: "{{ pyenv_symlink_exec }} virtualenv {{ item.version }} {{ item.name }}"
   with_items: "{{ virtualenvs }}"
   when: item.name not in virtualenv_versions.stdout
@@ -56,11 +56,16 @@
   with_items: "{{ virtualenvs }}"
   when: item.name not in virtualenv_current_version.stdout_lines and item.name not in virtualenv_versions.stdout
 
-- name: VirtualEnv | Verify current version
-  shell: "{{ pyenv_symlink_exec }} virtualenvs | grep '*'"
+- name: VirtualEnv | Fetch virtualenv installation(s)
+  shell: "{{ pyenv_symlink_exec }} virtualenvs"
   register: virtualenv_current_version_after_role
-  failed_when: '"{{ virtualenv }}" not in "{{ virtualenv_current_version_after_role.stdout_lines }}"'
-  when: 'virtualenv not in virtualenv_current_version.stdout_lines'
+  changed_when: false
+
+- name: VirtualEnv | Assert virtualenv installation(s)
+  assert:
+    that: item.name in virtualenv_current_version_after_role.stdout
+  with_items: "{{ virtualenvs }}"
+  changed_when: false
 
 - name: VirtualEnv | Restart shell
   shell: "source {{ fubarhouse_user_dir }}/{{ item.filename }}"
