--- a/tasks/cleanup.yml
+++ b/tasks/cleanup.yml
@@ -5,12 +5,12 @@
     path: "{{ item }}"
     state: absent
   with_items:
-   - "{{ fubarhouse_user_dir }}/{{ pyenv_main_dir }}"
+   - "{{ shell_home_dir.stdout }}/{{ pyenv_main_dir }}"
    - "{{ pyenv_symlink_exec }}"
 
 - name: "PyEnv | Ensure shell profiles are clean"
   lineinfile:
-    dest: "{{ fubarhouse_user_dir }}/{{ item[0].filename }}"
+    dest: "{{ shell_home_dir.stdout }}/{{ item[0].filename }}"
     regexp: "{{ item[1].regex }}"
     line: "{{ item[1].lineinfile }}"
     state: absent
